...
            ),
        colors = ButtonDefaults.buttonColors(Color.Transparent)
    ) {
        if (isLoading) {
            CircularProgressIndicator(
                color = colorText,
                modifier = Modifier.testTag("progress_indicator")
            )
        } else {
            Text(
                text = buttonName,
                color = colorText,
                fontSize = 22.sp,
...
